--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.30.3",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.0",
     "convex": "^1.7.1",
     "lucide-react": "^0.309.0",
     "next": "13.5.6",
@@ -23,10 +28,13 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "shadcn-ui": "^0.7.0",
+    "skeleton": "^0.1.2",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^2.9.4"
+    "usehooks-ts": "^2.9.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
