--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.11.1",
+    "@blocknote/react": "^0.11.1",
     "@clerk/clerk-react": "^4.30.3",
+    "@edgestore/react": "^0.1.6",
+    "@edgestore/server": "^0.1.6",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -22,18 +26,22 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "convex": "^1.7.1",
+    "emoji-picker-react": "^4.7.0",
     "lucide-react": "^0.309.0",
     "next": "13.5.6",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
+    "react-textarea-autosize": "^8.5.3",
     "shadcn-ui": "^0.7.0",
     "skeleton": "^0.1.2",
     "sonner": "^1.3.1",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.4",
+    "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
